output user ID and session start time